Bug 497317 - Setting "Use Enter to move between fields" does not work
Summary: Setting "Use Enter to move between fields" does not work
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: git (master)
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-12-11 09:32 UTC by Paul Worrall
Modified: 2024-12-13 17:17 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul Worrall 2024-12-11 09:32:30 UTC
Using version 5.1.80-5801daa (kmymoney-master-3741-linux-gcc-x86_64.AppImage):

1. Enable the setting "Use Enter to move between fields"
2. Start New Transaction (e.g. Ctrl+Ins)
3. Press Enter when in any field

OBSERVED RESULT
The transaction is entered into the ledger

EXPECTED RESULT
The focus moves to the next field in the transaction form

SYSTEM INFO
KDE Plasma Version: 6.2.4
KDE Frameworks Version: 6.8.0
Qt Version: 6.8.0
Graphics Platform: Wayland
Comment 1 Paul Worrall 2024-12-11 09:47:30 UTC
The setting works OK on 5.1.3 so added "regression" keyword
Comment 2 Thomas Baumgart 2024-12-13 17:17:23 UTC
Git commit 1ec4a9cdb0c568dff3b7a6017444fb4643ac7994 by Thomas Baumgart.
Committed on 13/12/2024 at 17:16.
Pushed by tbaumgart into branch 'master'.

Allow Enter to move between fields in transaction editors
FIXED-IN: 5.2

M  +6    -5    kmymoney/views/investtransactioneditor.cpp
M  +27   -0    kmymoney/views/newspliteditor.cpp
M  +13   -13   kmymoney/views/newtransactioneditor.cpp
M  +65   -2    kmymoney/views/transactioneditorbase.cpp
M  +8    -3    kmymoney/views/transactioneditorbase.h

https://invent.kde.org/office/kmymoney/-/commit/1ec4a9cdb0c568dff3b7a6017444fb4643ac7994