Allow Enter to move between fields in transaction editors

BUG: 497317
FIXED-IN: 5.2